--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,4 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="AppTheme.Picker" parent="Theme.AppCompat.Light.DarkActionBar" >
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
+        <item name="android:textSize">30sp</item>
+    </style>
 </resources>
